deploymentfiles/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nestjs-ingress
  annotations:
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: agw-cert
    appgw.ingress.kubernetes.io/backend-path-prefix: /eam/
    appgw.ingress.kubernetes.io/request-timeout: "60"
    appgw.ingress.kubernetes.io/rewrite-target: /
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: azure/application-gateway  # AGIC Ingress class
spec:
  rules:
    - host: abilitynk22euwdevce.dev.abilityplatform.abb
      http:
        paths:
          - path: /eam/*
            pathType: Prefix
            backend:
              service:
                name: nestjs-service  # The name of your service in Kubernetes
                port:
                  number: 80  # The port on which your NestJS app is running
